add english text

--- a/cleaning.html
+++ b/cleaning.html
@@ -47,11 +47,11 @@
                 <a href="#" class="menu__link">Usługi<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--1 js--menu-submenu">
                   <li class="menu-submenu__item">
-                    <a href="konserwacja.html" class="menu-submenu__link js-anchor--link">Konserwacja urządzeń elektroenergetycznych
+                    <a href="maintenance.html" class="menu-submenu__link js-anchor--link">Konserwacja urządzeń elektroenergetycznych
                     </a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie.html" class="menu-submenu__link js-anchor--link">Czyszczenie urządzeń elektrycznych
+                    <a href="cleaning.html" class="menu-submenu__link js-anchor--link">Czyszczenie urządzeń elektrycznych
                     </a>
                   </li>
                   <li class="menu-submenu__item">
@@ -144,8 +144,8 @@
       <section class="container">
       <div class="electrical__row electrical__row--1">
         <div class="electrical__col electrical__col--1">
-          <h2 class="electrical__col-title electrical__col-title--1">Czyszczenie urządzeń elektrycznych</h2>
-          <p class="electrical__col-text">Najbardziej efektywna z dostępnych na rynku technologia czyszczenia urządzeń elektrycznych. Dzięki zastosowaniu metody suchych gazów o ciśnieniu nie przekraczającym 0,5-1,5 bar nasz proces czyszczenia jest bezinwazyjny. Gwarantujemy bezpieczeństwo układów scalonych, ponieważ mieszanka jest całkowicie sucha, nie powoduje zawilgocenia, nie wchodzi w reakcje fizyczne, ani chemiczne z czyszczonymi elementami.</p>
+          <h2 class="electrical__col-title electrical__col-title--1">Cleaning of electrical appliances.</h2>
+          <p class="electrical__col-text">The most effective cleaning technology for electrical devices available on the market. Thanks to the use of the dry gas method with a pressure not exceeding 0.5-1.5 bar, our cleaning process is non-invasive. We guarantee the safety of integrated circuits, because the mixture is completely dry, does not cause moisture, does not enter into physical or chemical reactions with the cleaned elements.</p>
         </div>
         <div class="electrical__col electrical__col--2">
           <div class="electrical__picture electrical__picture--1">
@@ -163,10 +163,10 @@
           </figure>
         </div>
         <div class="electrical__col electrical__col--4">
-          <h3 class="electrical__col-title electrical__col-title--2">Obiżenie kosztów</h3>
+          <h3 class="electrical__col-title electrical__col-title--2">Cost reduction</h3>
           <ul class="electrical__col-list">
-            <li class="electrical__col-item electrical__col-item--bullet">Wielokrotnie wydłużony (nawet do 10x) okres między przeglądami</li>
-            <li class="electrical__col-item electrical__col-item--bullet">Eliminacja ryzyka przestojów linii technologicznych – mtbf (mean time between failure)</li>
+            <li class="electrical__col-item electrical__col-item--bullet">The service interval is extended many times (up to 10x)</li>
+            <li class="electrical__col-item electrical__col-item--bullet">Elimination of the risk of downtime in technological lines - mtbf (mean time between failure)</li>
             <li class="electrical__col-item electrical__col-item--bullet">Zmniejszenie poniesionych kosztów na wymianę podzespołów w szafach sterowniczych do 70%</li>
             <li class="electrical__col-item electrical__col-item--bullet">Znacząca redukcja strat energii</li>
             <li class="electrical__col-item electrical__col-item--bullet">Przywracanie sprawności podzespołów elektrycznych typowanych do wymiany</li>
