--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                   <a href="#" class="menu__link">Services<span class="menu__link--arrow"></span></a>
                   <ul class="menu-submenu menu-submenu--1 js--menu-submenu">
                     <li class="menu-submenu__item">
-                      <a href="konserwacja.html" class="menu-submenu__link js-anchor--link">Maintenance of electrical equipment</a>
+                      <a href="maintenance.html" class="menu-submenu__link js-anchor--link">Maintenance of electrical equipment</a>
                     </li>
                     <li class="menu-submenu__item">
-                      <a href="czyszczenie.html" class="menu-submenu__link js-anchor--link">Cleaning of electrical appliances</a>
+                      <a href="cleaning.html" class="menu-submenu__link js-anchor--link">Cleaning of electrical appliances</a>
                     </li>
                     <li class="menu-submenu__item">
                       <a href="czyszczenie-hydrodynamiczne.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
@@ -578,7 +578,7 @@
 
       </div>
 
-      <div class="main__trusted">
+      <!-- <div class="main__trusted">
         <h2 class="main__trusted-title">Zaufali nam:</h2>
 
         <div class="main__trusted-carousel">
@@ -609,7 +609,7 @@
             </figure>
           </div>
         </div>
-      </div>
+      </div> -->
 
 
       <div class="main__technologies">
