--- a/maintenance.html
+++ b/maintenance.html
@@ -6,7 +6,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="Nasza technologia pozwala na konserwację bez przestojów w produkcji, jest ekologiczna i bezpieczna, a ponadto wydłuża żywotność podzespołów.">
-  <title>Konserwacja urządzeń elekroenergetycznych 3n Solutions</title>
+  <title>Maintenance of electrical equipment 3n Solutions</title>
 
   <!-- Style CSS -->
 <!--  <link rel="stylesheet" href="css/normalize.css">-->
@@ -41,55 +41,47 @@
           <nav class="nav-menu" role="navigation">
             <ul class="menu">
               <li class="menu__item menu__item--dropdown">
-                <a href="#" class="menu__link">Usługi<span class="menu__link--arrow"></span></a>
+                <a href="#" class="menu__link">Services<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--1 js--menu-submenu">
                   <li class="menu-submenu__item">
-                    <a href="konserwacja.html" class="menu-submenu__link js-anchor--link">Konserwacja urządzeń elektroenergetycznych
-                    </a>
+                    <a href="konserwacja.html" class="menu-submenu__link js-anchor--link">Maintenance of electrical equipment</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie.html" class="menu-submenu__link js-anchor--link">Czyszczenie urządzeń elektrycznych
-                    </a>
+                    <a href="czyszczenie.html" class="menu-submenu__link js-anchor--link">Cleaning of electrical appliances</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-hydrodynamiczne.html" class="menu-submenu__link js-anchor--link">Czyszczenie hydrodynamiczne
-                    </a>
+                    <a href="czyszczenie-hydrodynamiczne.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-pozarowe.html" class="menu-submenu__link js-anchor--link">Czyszczenie popożarowe
-                    </a>
+                    <a href="czyszczenie-pozarowe.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="pomiary.html" class="menu-submenu__link js-anchor--link">Pomiary termowizyjne i elektryczne
-                    </a>
+                    <a href="pomiary.html" class="menu-submenu__link js-anchor--link">Thermovision and electrical measurements</a>
                   </li>
                 </ul>
               </li>
               <li class="menu__item">
-                <a href="realizacje.html" class="menu__link menu__link--space js-anchor--link">Realizacje</a>
+                <a href="realizacje.html" class="menu__link menu__link--space js-anchor--link">Realizations</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Technologie<span class="menu__link--arrow"></span></a>
+                <a href="#" class="menu__link">Technologies<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--2 js--menu-submenu">
                   <li class="menu-submenu__item">
-                    <a href="mieszanka-gazow.html" class="menu-submenu__link js-anchor--link">Mieszanka Gazów
-                    </a>
+                    <a href="mieszanka-gazow.html" class="menu-submenu__link js-anchor--link">Gas mixture</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-hydrodynamiczne-2.html" class="menu-submenu__link js-anchor--link">Czyszczenie hydrodynamiczne
-                    </a>
+                    <a href="czyszczenie-hydrodynamiczne-2.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="ozonowanie.html" class="menu-submenu__link js-anchor--link">Ozonowanie
-                    </a>
+                    <a href="ozonowanie.html" class="menu-submenu__link js-anchor--link">Ozonation</a>
                   </li>
                 </ul>
               </li>
               <li class="menu__item">
-                <a href="o-nas.html" class="menu__link menu__link--space js-anchor--link">O nas</a>
+                <a href="o-nas.html" class="menu__link menu__link--space js-anchor--link">About us</a>
               </li>
               <li class="menu__item">
-                <a href="kontakt.html" class="menu__link js-anchor--link">Kontakt</a>
+                <a href="kontakt.html" class="menu__link js-anchor--link">Contact</a>
               </li>
               <li class="menu__item menu-item--ue">
                 <a href="przetargi.html" class="menu__link-ue js-anchor--link">
@@ -141,9 +133,8 @@
     <section class="container">
       <article class="maintenance__article maintenance__article--first">
         <div class="maintenance__article-col maintenance__article-col--1">
-          <h2 class="maintenance__article-title">​Konserwacja urządzeń elektroenergetycznych</h2>
-          <p class="maintenance__article-paragraph">Konserwacja urządzeń elektrycznych jest elementem niezbędnym prawidłowego utrzymania ruchu w zakładach produkcyjnych. Nasza technologia pozwala na konserwację bez przestojów w produkcji, jest ekologiczna i bezpieczna,
-            a ponadto wydłuża żywotność podzespołów.</p>
+          <h2 class="maintenance__article-title">​Maintenance of electrical equipment</h2>
+          <p class="maintenance__article-paragraph">Maintenance of electrical devices is an essential element of proper maintenance in production plants. Our technology allows for maintenance without downtime in production, is ecological and safe, and also extends the life of components.</p>
         </div>
         <div class="maintenance__article-col maintenance__article-col--2">
           <div class="maintenance__article-graphics maintenance__article-graphics--1">
@@ -157,21 +148,20 @@
         <div class="maintenance__article-wizard">
           <div class="maintenance__wizard">
             <div class="maintenance__wizard-navigation">
-              <h3 class="maintenance__wizard-heading">Prace konserwacyjne dzielimy
-                na trzy podstawowe etapy:</h3>
+              <h3 class="maintenance__wizard-heading">We divide maintenance work into three basic stages:</h3>
               <div class="maintenance__wizard-progressbar"></div>
               <div class="maintenance__wizard-progressfill"></div>
               <ul class="maintenance__wizard-stages">
                 <li class="maintenance__wizard-stage maintenance__wizard-stage--1 is-enabled">
-                  <a href="#box1" class="maintenance__wizard-step maintenance__wizard-step--1">Przygotowanie</a>
+                  <a href="#box1" class="maintenance__wizard-step maintenance__wizard-step--1">Preparation</a>
                   <span class="maintenance__wizard-step-number"></span>
                 </li>
                 <li class="maintenance__wizard-stage maintenance__wizard-stage--2">
-                  <a href="#box2" class="maintenance__wizard-step maintenance__wizard-step--2">Konserwacja</a>
+                  <a href="#box2" class="maintenance__wizard-step maintenance__wizard-step--2">Maintenance</a>
                   <span class="maintenance__wizard-step-number"></span>
                 </li>
                 <li class="maintenance__wizard-stage maintenance__wizard-stage--3">
-                  <a href="#box3" class="maintenance__wizard-step maintenance__wizard-step--3">Zakończenie</a>
+                  <a href="#box3" class="maintenance__wizard-step maintenance__wizard-step--3">Termination</a>
                   <span class="maintenance__wizard-step-number"></span>
                 </li>
               </ul>
@@ -190,12 +180,8 @@
                 </div>
 
                 <div class="maintenance__wizard-content__wrap">
-                  <p class="maintenance__wizard-content__text">
-                    Wizja lokalna – inwentaryzacja urządzeń wskazanych przez klienta, wstępna ocena stanu technicznego.</p>
-                  <p class="maintenance__wizard-content__text">
-                    Pomiary termowizyjne i elektryczne przed wykonaniem konserwacji – szczegółowa ocena stanu podzespołów
-                    i urządzeń elektrycznych i ewentualnych zagrożeń raport
-                    z inspekcji – zawierający podsumowanie Etapu 1 oraz 2.</p>
+                  <p class="maintenance__wizard-content__text">Site inspection - inventory of devices indicated by the customer, preliminary technical condition assessment.</p>
+                  <p class="maintenance__wizard-content__text">Thermovision and electrical measurements before performing maintenance - detailed assessment of the condition of electrical components and devices and possible threats inspection report - containing a summary of Stages 1 and 2.</p>
                 </div>
               </div>
 
@@ -210,8 +196,8 @@
                 </div>
 
                 <div class="maintenance__wizard-content__wrap">
-                  <p class="maintenance__wizard-content__text">Czyszczenie urządzeń</p>
-                  <p class="maintenance__wizard-content__text">Konserwacja</p>
+                  <p class="maintenance__wizard-content__text">Equipment cleaning</p>
+                  <p class="maintenance__wizard-content__text">Maintenance</p>
                 </div>
               </div>
 
@@ -227,8 +213,8 @@
                 </div>
 
                 <div class="maintenance__wizard-content__wrap">
-                  <p class="maintenance__wizard-content__text">Pomiary termowizyjne i elektryczne po wykonaniu prac</p>
-                  <p class="maintenance__wizard-content__text">Raport z konserwacji</p>
+                  <p class="maintenance__wizard-content__text">Thermovision and electrical measurements after work</p>
+                  <p class="maintenance__wizard-content__text">Maintenance report</p>
                 </div>
               </div>
 
@@ -244,7 +230,7 @@
   <!-- services -->
   <section class="services services--bg">
     <section class="container">
-      <h2 class="services__title">Nasze usługi</h2>
+      <h2 class="services__title">Our services</h2>
       <div class="services__wrapper">
         <div class="services__wrapper__box">
           <figure class="services__wrapper__box-img">
@@ -253,10 +239,10 @@
               <source srcset="images/img__2.jpg" type="image/jpeg" class="services__wrapper-img">
               <img src="images/img__2.jpg" class="services__wrapper-img" alt="">
             </picture>
-            <figcaption class="services__wrapper__box-title">Czyszczenie urządzeń
-              elektrycznych</figcaption>
+            <figcaption class="services__wrapper__box-title">Cleaning of electrical
+               appliances</figcaption>
           </figure>
-          <a href="czyszczenie.html" role="button" class="services__wrapper__box-btn">Więcej</a>
+          <a href="czyszczenie.html" role="button" class="services__wrapper__box-btn">More</a>
         </div>
 
         <div class="services__wrapper__box">
@@ -266,10 +252,10 @@
               <source srcset="images/img__3.jpg" type="image/jpeg" class="services__wrapper-img">
               <img src="images/img__3.jpg" class="services__wrapper-img" alt="">
             </picture>
-            <figcaption class="services__wrapper__box-title">Czyszczenie
-              hydrodynamiczne</figcaption>
+            <figcaption class="services__wrapper__box-title">Hydrodynamic 
+              cleaning</figcaption>
           </figure>
-          <a href="czyszczenie-hydrodynamiczne.html" role="button" class="services__wrapper__box-btn">Więcej</a>
+          <a href="czyszczenie-hydrodynamiczne.html" role="button" class="services__wrapper__box-btn">More</a>
         </div>
         <div class="services__wrapper__box">
           <figure class="services__wrapper__box-img">
@@ -278,10 +264,10 @@
               <source srcset="images/img__4.jpg" type="image/jpeg" class="services__wrapper-img">
               <img src="images/img__4.jpg" class="services__wrapper-img" alt="">
             </picture>
-            <figcaption class="services__wrapper__box-title">Czyszczenie
-              popożarowe</figcaption>
+            <figcaption class="services__wrapper__box-title">After-fire 
+              cleaning</figcaption>
           </figure>
-          <a href="czyszczenie-pozarowe.html" role="button" class="services__wrapper__box-btn">Więcej</a>
+          <a href="czyszczenie-pozarowe.html" role="button" class="services__wrapper__box-btn">More</a>
         </div>
         <div class="services__wrapper__box">
           <figure class="services__wrapper__box-img">
@@ -290,10 +276,10 @@
               <source srcset="images/img__5.jpg" type="image/jpeg" class="services__wrapper-img">
               <img src="images/img__5.jpg" class="services__wrapper-img" alt="">
             </picture>
-            <figcaption class="services__wrapper__box-title">Pomiary termowizyjne
-              i elektryczne</figcaption>
+            <figcaption class="services__wrapper__box-title">Thermovision 
+              and electrical measurements</figcaption>
           </figure>
-          <a href="pomiary.html" role="button" class="services__wrapper__box-btn">Więcej</a>
+          <a href="pomiary.html" role="button" class="services__wrapper__box-btn">More</a>
         </div>
       </div>
     </section>
@@ -318,18 +304,18 @@
         <div class="footer-content__bottom">
           <div class="footer-content__bottom-left">
             <div class="footer-content__bottom-left__details footer-content__bottom-left__details--1">
-              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Kontakt</h4>
+              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Contact</h4>
               <span class="footer-content__bottom-left__details-email">biuro@3ns.com.pl</span>
               <span class="footer-content__bottom-left__details-phone">+48 22 233 00 50</span>
             </div>
             <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
               <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Biuro Handlowe</h4>
+                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Sales office</h4>
                 <span class="footer-content__bottom-left__details-adress">ul Szeligowska 40 a
                 01-320 Warszawa</span>
               </div>
               <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Siedziba Firmy</h4>
+                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Headquarters</h4>
                 <span class="footer-content__bottom-left__details-adress">ul. Złota 61/100,
                 00-819 Warszawa
               </span>
@@ -338,7 +324,7 @@
           </div>
           <div class="footer-content__bottom-center">
             <div class="footer-content__bottom-center__content">
-              <h4 class="footer-content__bottom-center__title">Znajdziesz Nas</h4>
+              <h4 class="footer-content__bottom-center__title">Find us</h4>
               <a href="https://www.youtube.com/channel/UCIG0oIqClmQGIiZorvGrTLQ" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--yt"><img src="images/logo-yt.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--yt">
               </a>
               <a href="https://www.linkedin.com/company/3nsolutions/" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--in"><img src="images/logo-linkedIn.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--in"></a>
@@ -351,9 +337,10 @@
             </div>
             <div class="footer-content__bottom-right__details footer-content__bottom-right__details--2">
               <span class="footer-content__bottom-right__details-krs">KRS:0000257515, Sąd Rejonowy dla m.st.
-                Warszawy XII Wydział Gospodarczy Krajowego
-                Rejestru Sądowego NIP:5213388077, REGON:140555502
-                Kapitał zakładowy:50 000 zł (wpłacony w całości)</span>
+                KRS: 0000257515, District Court for the Capital City of
+                Warsaw, XII Commercial Division of the National
+                Court Register NIP: 5213388077, REGON: 140555502
+                Share capital: PLN 50,000 (paid up in full)</span>
             </div>
           </div>
         </div>
