add english text

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                       <a href="cleaning.html" class="menu-submenu__link js-anchor--link">Cleaning of electrical appliances</a>
                     </li>
                     <li class="menu-submenu__item">
-                      <a href="czyszczenie-hydrodynamiczne.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
+                      <a href="hydrodynamic-cleaning.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                     </li>
                     <li class="menu-submenu__item">
                       <a href="czyszczenie-pozarowe.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
