--- a/hydrodynamic-cleaning.html
+++ b/hydrodynamic-cleaning.html
@@ -6,7 +6,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="Korzystamy technologię czyszczenia powierzchni z wykorzystaniem wysokich ciśnień, która pozwala szybko i skutecznie usuwać wszelkie zabrudzenia.">
-  <title>Czyszczenie hydrodynamiczne 3n Solutions</title>
+  <title>Hydrodynamic cleaning 3n Solutions</title>
 
   <!-- Google Fonts -->
 
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="css/style.css">
 
   <!-- Font Awesome Icons -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
 </head>
 <body>
 <!-- wrapper -->
@@ -46,52 +46,44 @@
                 <a href="#" class="menu__link">Usługi<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--1 js--menu-submenu">
                   <li class="menu-submenu__item">
-                    <a href="konserwacja.html" class="menu-submenu__link js-anchor--link">Konserwacja urządzeń elektroenergetycznych
-                    </a>
+                    <a href="konserwacja.html" class="menu-submenu__link js-anchor--link">Maintenance of electrical equipment</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie.html" class="menu-submenu__link js-anchor--link">Czyszczenie urządzeń elektrycznych
-                    </a>
+                    <a href="czyszczenie.html" class="menu-submenu__link js-anchor--link">Cleaning of electrical appliances</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-hydrodynamiczne.html" class="menu-submenu__link js-anchor--link">Czyszczenie hydrodynamiczne
-                    </a>
+                    <a href="hydrodynamic-cleaning.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-pozarowe.html" class="menu-submenu__link js-anchor--link">Czyszczenie popożarowe
-                    </a>
+                    <a href="czyszczenie-pozarowe.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="pomiary.html" class="menu-submenu__link js-anchor--link">Pomiary termowizyjne i elektryczne
-                    </a>
+                    <a href="pomiary.html" class="menu-submenu__link js-anchor--link">Thermovision and electrical measurements</a>
                   </li>
                 </ul>
               </li>
               <li class="menu__item">
-                <a href="realizacje.html" class="menu__link menu__link--space js-anchor--link">Realizacje</a>
+                <a href="realizacje.html" class="menu__link menu__link--space js-anchor--link">Realizations</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Technologie<span class="menu__link--arrow"></span></a>
+                <a href="#" class="menu__link">Technologies<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--2 js--menu-submenu">
                   <li class="menu-submenu__item">
-                    <a href="mieszanka-gazow.html" class="menu-submenu__link js-anchor--link">Mieszanka Gazów
-                    </a>
+                    <a href="mieszanka-gazow.html" class="menu-submenu__link js-anchor--link">Gas mixture</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-hydrodynamiczne-2.html" class="menu-submenu__link js-anchor--link">Czyszczenie hydrodynamiczne
-                    </a>
+                    <a href="czyszczenie-hydrodynamiczne-2.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="ozonowanie.html" class="menu-submenu__link js-anchor--link">Ozonowanie
-                    </a>
+                    <a href="ozonowanie.html" class="menu-submenu__link js-anchor--link">Ozonation</a>
                   </li>
                 </ul>
               </li>
               <li class="menu__item">
-                <a href="o-nas.html" class="menu__link menu__link--space js-anchor--link">O nas</a>
+                <a href="o-nas.html" class="menu__link menu__link--space js-anchor--link">About us</a>
               </li>
               <li class="menu__item">
-                <a href="kontakt.html" class="menu__link js-anchor--link">Kontakt</a>
+                <a href="kontakt.html" class="menu__link js-anchor--link">Contact</a>
               </li>
               <li class="menu__item menu-item--ue">
                 <a href="przetargi.html" class="menu__link-ue js-anchor--link">
@@ -143,8 +135,9 @@
     <section class="container">
       <div class="hydrodynamic__row hydrodynamic__row--1">
         <div class="hydrodynamic__col hydrodynamic__col--1">
-          <h2 class="hydrodynamic__col-title hydrodynamic__col-title--1">Czyszczenie hydrodynamiczne</h2>
-          <p class="hydrodynamic__col-text">Poprawa efektywności oraz bezpieczeństwa działania zakładów naszych Klientów, poprzez stosowaną przez nas technologię czyszczenia powierzchni z wykorzystaniem wysokich ciśnień, która pozwala szybko i skutecznie usuwać wszelkie zabrudzenia.  Nasze rozwiązania znajdują szerokie zastosowanie niemal we wszystkich gałęziach przemysłu. Korzystając z mobilnych agregatów i specjalistycznych dysz, możemy docierać do trudno dostępnych miejsc. </p>
+          <h2 class="hydrodynamic__col-title hydrodynamic__col-title--1">Hydrodynamic cleaning</h2>
+          <p class="hydrodynamic__col-text">The high pressure solutions we use enable cleaning and removal of
+            concrete, corrosion, rust, paints, hard deposits and many other coatings that are difficult to remove. Using mobile aggregates and specialized nozzles, we can access places that are impossible to reach.</p>
         </div>
         <div class="hydrodynamic__col hydrodynamic__col--2">
           <div class="hydrodynamic__graphics hydrodynamic__graphics--1">
@@ -155,26 +148,26 @@
         </div>
       </div>
       <div class="hydrodynamic__row hydrodynamic__row--2">
-          <p class="hydrodynamic__row-text hydrodynamic__row-text--1">Nasze metody pracy umożliwiają czyszczenie i usuwanie betonu, korozji, rdzy, farb, twardych
-            osadów oraz wielu innych trudnych do zlikwidowania powłok.</p>
+          <p class="hydrodynamic__row-text hydrodynamic__row-text--1">Our working methods can clean and remove concrete, corrosion, rust, paint, hard deposits and many other hard-to-remove coatings.</p>
       </div>
     </section>
       <div class="hydrodynamic__row hydrodynamic__row--3">
         <section class="container">
           <div class="hydrodynamic__sub-row">
             <div class="hydrodynamic__row-boxes">
-              <div class="hydrodynamic__row-box hydrodynamic__row-box--1">Czyszczenie
-                wymienników ciepła</div>
-              <div class="hydrodynamic__row-box hydrodynamic__row-box--2">Czyszczenie rurociągów,
-                układów rur</div>
-              <div class="hydrodynamic__row-box hydrodynamic__row-box--3">Czyszczenie silosów,
-                zbiorników</div>
-              <div class="hydrodynamic__row-box hydrodynamic__row-box--4">Czyszczenie reaktorów,
-                kotłów</div>
-              <div class="hydrodynamic__row-box hydrodynamic__row-box--5">Czyszczenie instalacji
-                przemysłowych, podłóg, posadzek</div>
-              <div class="hydrodynamic__row-box hydrodynamic__row-box--6">Czyszczenie podczas remontów
-                planowych</div>
+              <div class="hydrodynamic__row-box hydrodynamic__row-box--1">Cleaning of 
+                heat exchangers</div>
+              <div class="hydrodynamic__row-box hydrodynamic__row-box--2">Cleaning of pipelines, 
+                pipe systems</div>
+              <div class="hydrodynamic__row-box hydrodynamic__row-box--3">Cleaning of silos, 
+                tanks</div>
+              <div class="hydrodynamic__row-box hydrodynamic__row-box--4">Cleaning of reactors, 
+                boilers</div>
+              <div class="hydrodynamic__row-box hydrodynamic__row-box--5">Cleaning of industrial 
+                installations, floors and floors</div>
+              <div class="hydrodynamic__row-box hydrodynamic__row-box--6">Cleaning during 
+                planned 
+                renovations</div>
             </div>
             <div class="hydrodynamic__row-wrap">
               <div class="hydrodynamic__col hydrodynamic__col--3">
