--- a/maintenance.html
+++ b/maintenance.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="css/style.css">
 
   <!-- Font Awesome Icons -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
 </head>
 <body>
 <!-- wrapper -->
@@ -44,13 +44,13 @@
                 <a href="#" class="menu__link">Services<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--1 js--menu-submenu">
                   <li class="menu-submenu__item">
-                    <a href="konserwacja.html" class="menu-submenu__link js-anchor--link">Maintenance of electrical equipment</a>
+                    <a href="maintenance.html" class="menu-submenu__link js-anchor--link">Maintenance of electrical equipment</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie.html" class="menu-submenu__link js-anchor--link">Cleaning of electrical appliances</a>
+                    <a href="cleaning.html" class="menu-submenu__link js-anchor--link">Cleaning of electrical appliances</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-hydrodynamiczne.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
+                    <a href="hydrodynamic-cleaning.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
                     <a href="czyszczenie-pozarowe.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
@@ -242,7 +242,7 @@
             <figcaption class="services__wrapper__box-title">Cleaning of electrical
                appliances</figcaption>
           </figure>
-          <a href="czyszczenie.html" role="button" class="services__wrapper__box-btn">More</a>
+          <a href="cleaning.html" role="button" class="services__wrapper__box-btn">More</a>
         </div>
 
         <div class="services__wrapper__box">
@@ -255,7 +255,7 @@
             <figcaption class="services__wrapper__box-title">Hydrodynamic 
               cleaning</figcaption>
           </figure>
-          <a href="czyszczenie-hydrodynamiczne.html" role="button" class="services__wrapper__box-btn">More</a>
+          <a href="hydrodynamic-cleaning.html" role="button" class="services__wrapper__box-btn">More</a>
         </div>
         <div class="services__wrapper__box">
           <figure class="services__wrapper__box-img">
